src/test/ui/unsized-locals/unsized-exprs2.stderr
error[E0507]: cannot move out of indexed content
  --> $DIR/unsized-exprs2.rs:22:19
   |
LL |     udrop::<[u8]>(foo()[..]);
   |                   ^^^^^^^^^ cannot move out of indexed content

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
